assets/styles/components/_highlightjs.scss
/* for block of numbers */
.hljs-ln-numbers {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;

	text-align: center;
	color: #ccc;
	border-right: 1px solid rgba(204, 204, 204, 0.514);
	vertical-align: top;
	padding-right: 5px;

	/* your custom style here */
}

.hljs-ln td {
	@media (max-width: 576px) {
		font-size: 8px !important;
	}
}

.hljs-ln td:nth-child(1) {
	padding-right: 10px !important;
}
.hljs-ln td:nth-child(2) {
	padding-left: 10px !important;
}

pre {
	moz-tab-size: 2;
	tab-size: 2;
	color: white;
	background: #222;
	border-radius: 10px;
	box-shadow: inset 0px 0px 5px 3px rgba(0, 0, 0, 0.7);
	padding: 20px;
	font-weight: bold;

	code.hljs {
		padding: 0.5em;
	}
}

